--- a/Source/TypeScript/pipeline.yml
+++ b/Source/TypeScript/pipeline.yml
@@ -14,6 +14,7 @@ jobs:
 - job: Release
   pool: ${{ parameters.pool }}
   dependsOn: Build
+  condition: succeeded()
   variables:
   - group: global-var-pipelines
   steps:
