--- a/Source/TypeScript/release.yml
+++ b/Source/TypeScript/release.yml
@@ -54,6 +54,8 @@ steps:
     }
     main () {
         setup
+        echo "$VERSION"
+        echo "$Version"
         echo "$(VERSION)"
         echo "$(Version)"
         VERSION="$(Version)"
