Install yq on build agent

--- a/Source/Agent/Dockerfile
+++ b/Source/Agent/Dockerfile
@@ -12,11 +12,14 @@ RUN apt-get update \
         jq \
         iputils-ping \
         libcurl4
+
 RUN apt-get -y install software-properties-common dirmngr apt-transport-https lsb-release ca-certificates
 RUN add-apt-repository ppa:git-core/ppa -y && apt-get update && apt-get install git -y
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
 RUN echo "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" | tee /etc/apt/sources.list.d/mono-official-stable.list
 RUN apt update && apt install -y mono-devel
+RUN add-apt-repository ppa:rmescandon/yq
+RUN apt update && apt install yq -y
 
 WORKDIR /azp
 
