--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -16,14 +16,14 @@ steps:
         echo "$COMMIT_MSG"
     }
     get_latest_version_tag () {
-        local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
-        while [ ! "$TAG_REFS" ]
-        do
-            sleep 1
-        done
+        local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
+#        while [ ! "$TAG_REFS" ]
+#        do
+#            sleep 1
+#        done
 
-        local VERSION=$(echo $TAG_REFS | grep -o -E "refs/tags/\S+" | grep -o -e "[0-9]\+\.[0-9]\+\.[0-9]\+" | head -1)
-        echo "$VERSION"
+#        local VERSION=$(echo $TAG_REFS | grep -o -E "refs/tags/\S+" | grep -o -e "[0-9]\+\.[0-9]\+\.[0-9]\+" | head -1)
+        echo "$TAG_REFS"
     }
 
     main () {
