--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -6,8 +6,13 @@ steps:
     echoerr () { 
         printf "%s\n" "$*" >&2;
     }
-    get_labels_from_pull_request () {
+    get_labels_from_merged_pull_request () {
         local MERGED_PR_JSON=$(curl https://api.github.com/repos/$REPO/pulls\?state\=all | jq '.[] | select(.merge_commit_sha=="'$COMMIT_SHA'")')
+        local LABELS=$(echo $MERGED_PR_JSON | jq '.labels | .[] | .name' -r)
+        echo "$LABELS"
+    }
+    get_labels_from_not_merged_pull_request () {
+        local MERGED_PR_JSON=$(curl https://api.github.com/repos/$REPO/pulls\?state\=all | jq '.[] | select(.head.sha=="'$COMMIT_SHA'")')
         local LABELS=$(echo $MERGED_PR_JSON | jq '.labels | .[] | .name' -r)
         echo "$LABELS"
     }
@@ -33,69 +38,78 @@ steps:
         COMMIT_SHA=$(Build.SourceVersion)
         REPO=`echo "$URL" | awk -F ".com/" '{ print $2 }'`
         BRANCH=$(echo $BRANCH | cut -d "/" -f 3)
-
+        
         if [ "$BRANCH" = "master" ]
         then
-            echo Commit has been made to master. Figuring out if there is a new release...
-            LABELS=$(get_labels_from_pull_request)
+            echo Commit has been made to master.
+            echo "##vso[task.setvariable variable=IsMerge;isOutput=true]true"
+
+            LABELS=$(get_labels_from_merged_pull_request)
             MAJOR_LABEL=$(echo "$LABELS" | grep -E '^major$')
             MINOR_LABEL=$(echo "$LABELS" | grep -E '^minor$')
             PATCH_LABEL=$(echo "$LABELS" | grep -E '^patch$')
             echo "Got labels from pull request:"
             echo "$LABELS"
-
-            COMMIT_MESSAGE=$(get_last_commit_message_to_master)
-            echo Last commit message
-            echo "$COMMIT_MESSAGE"
-
-            if [ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ] || [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ]
-            then
-                echo "Getting version tag..."
-                
-                VERSION=$(get_latest_version_tag)
-                NEW_PROJECT=false
-                if [ ! "$VERSION" ]
-                then
-                    NEW_PROJECT=true
-                    VERSION=1.0.0
-                    echo No version tag found. Setting version to "$VERSION"
-                fi
-                MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-                MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-                PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-                
-                if [ "$MAJOR_LABEL" = "major" ] && [ "$NEW_PROJECT" = false ]
-                then
-                    echo "New major release"
-                    MAJOR=$((MAJOR+1))
-                    MINOR="0"
-                    PATCH="0"
-
-                elif [ "$MINOR_LABEL" = "minor" ] && [ "$NEW_PROJECT" = false ]
-                then
-                    echo "New minor release"
-                    MINOR=$((MINOR+1))
-                    PATCH="0"
-                elif [ "$PATCH_LABEL" = "patch" ] && [ "$NEW_PROJECT" = false ]
-                then
-                    echo "New patch release"
-                    PATCH=$((PATCH+1))
-                elif [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ] && [ "$NEW_PROJECT" = false ]
-                then
-                    echo "New patch release, dependency has been upgraded."
-                    PATCH=$((PATCH+1))
-                fi
-                NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-                echo Previous version "$VERSION"
-                echo New version "$NEW_VERSION"
-            else
-                echoerr No label triggering new version
-                echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
-            fi
         else
             echo No commit to master
-            echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
+            echo "##vso[task.setvariable variable=IsMerge;isOutput=true]false"
+            
+            LABELS=$(get_labels_from_not_merged_pull_request)
+            MAJOR_LABEL=$(echo "$LABELS" | grep -E '^major$')
+            MINOR_LABEL=$(echo "$LABELS" | grep -E '^minor$')
+            PATCH_LABEL=$(echo "$LABELS" | grep -E '^patch$')
+            echo "Got labels from pull request:"
+            echo "$LABELS"
+        fi
+
+        COMMIT_MESSAGE=$(get_last_commit_message_to_master)
+        echo Last commit message
+        echo "$COMMIT_MESSAGE"
+
+        if [ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ] || [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ]
+        then
+            echo "Getting version tag..."
+            
+            VERSION=$(get_latest_version_tag)
+            NEW_PROJECT=false
+            if [ ! "$VERSION" ]
+            then
+                NEW_PROJECT=true
+                VERSION=1.0.0
+                echo No version tag found. Setting version to "$VERSION"
+            fi
+            MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+            MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+            PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+            
+            if [ "$MAJOR_LABEL" = "major" ] && [ "$NEW_PROJECT" = false ]
+            then
+                echo "New major release"
+                MAJOR=$((MAJOR+1))
+                MINOR="0"
+                PATCH="0"
+
+            elif [ "$MINOR_LABEL" = "minor" ] && [ "$NEW_PROJECT" = false ]
+            then
+                echo "New minor release"
+                MINOR=$((MINOR+1))
+                PATCH="0"
+            elif [ "$PATCH_LABEL" = "patch" ] && [ "$NEW_PROJECT" = false ]
+            then
+                echo "New patch release"
+                PATCH=$((PATCH+1))
+            elif [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ] && [ "$NEW_PROJECT" = false ]
+            then
+                echo "New patch release, dependency has been upgraded."
+                PATCH=$((PATCH+1))
+            fi
+            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+            echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+            echo Previous version "$VERSION"
+            echo New version "$NEW_VERSION"
+        else
+            echoerr No label triggering new version
+            echo "##vso[task.setvariable variable=Version;isOutput=true]<"
         fi
     }
     main
