--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -3,14 +3,17 @@ parameters:
   START_DIRECTORY: ''
 
 steps:
+  - script: echo Looking for cascades and creating steps for them if any
+    displayName: Cascading Build initial log
   - ${{ each repo in parameters.CASCADES }}:
     - script: echo ${{ repo }}
+      displayName: Log repo
     - bash: |
         git clone --recursive https://github.com/${{ repo }}.git
         DIR=$(echo ${{ repo }} | cut -d "/" -f 2)
         echo "##vso[task.setvariable variable=Folder;isOutput=true]$DIR"
-      displayName: Clone cascading repo
       workingDirectory: $(Agent.BuildDirectory)
+      displayName: Clone cascading repo
       name: clone_repo
     
     - template: './build.yml'
