--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -34,5 +34,5 @@ steps:
     #     versionEnvVar: set_version.Version
     #     outputDir: '/root/.nuget/dolittle-packages'
     
-  - ${{ each repo in parameters.CASCADES }}:
-    - # Get CASCADES from each of the repos git links and do cascading build on those
+  # - ${{ each repo in parameters.CASCADES }}:
+  #  -  Get CASCADES from each of the repos git links and do cascading build on those
