--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -61,6 +61,10 @@ jobs:
   dependsOn: 'DotNetCore_Build'
   condition: and(succeeded(), ne(dependencies.DotNetCore_Build.outputs['set_version.Version'], 'empty'))
   steps:
+   - task: DotNetCoreInstaller@0
+    inputs:
+      version: '2.2.203'
+
   - template: './cascading_build.yml'
     parameters:
       CASCADES: ${{ parameters.CASCADES }}
