--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -27,8 +27,8 @@ jobs:
 #  - script: echo Version is $(set_version.Version)
 #    displayName: Print version
 
-#  - script: echo Is merging $(set_version.IsMerge)
-#    displayName: Print is merge
+  - script: echo Is merging $(set_version.IsMerge)
+    displayName: Print is merge
 
   - script: echo Version is not empty
     condition: ne('$(set_version.Version)', 'empty')
@@ -69,17 +69,17 @@ jobs:
     parameters:
       CASCADES: ${{ parameters.CASCADES }}
 
-# - job: 'Release'
-#   pool: ${{ parameters.buildConfiguration }}
-#   dependsOn: 'DotNetCore_Build'
-#   condition: and(succeeded(), ne($(set_version.Version), 'empty'), eq($(set_version.IsMerge), 'true'))
-#   variables:
-#   - group: global-var-pipelines
-#   - name: NEW_VERSION
-#     value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
+ - job: 'Release'
+   pool: ${{ parameters.buildConfiguration }}
+   dependsOn: 'DotNetCore_Build'
+   condition: and(succeeded(), ne($(set_version.Version), 'empty'), eq($(set_version.IsMerge), 'true'))
+   variables:
+   - group: global-var-pipelines
+   - name: NEW_VERSION
+     value: $[ dependencies.DotNetCore_Build.outputs['set_version.Version'] ]
 
-#   steps:
-#   - template: ../Versioning/commit_version_tag.yml
+   steps:
+   - template: ../Versioning/commit_version_tag.yml
   
 #   - download: current
 #     artifact: 'NugetPack'
@@ -87,14 +87,14 @@ jobs:
 #   - script: ls -R  $(Pipeline.Workspace)
 #     displayName: Checking packages
   
-#   - task: NuGetCommand@2
-#     displayName: Push Nuget packs
-#     condition: ne( variables.NEW_VERSION , 'empty')
-#     inputs:
-#       command: push
-#       nugetFeedType: 'external'
-#       packagesToPush: '/root/.nuget/dolittle-packages/**/*.nupkg'
-#       publishFeedCredentials: 'myget_mathieu'
+   - task: NuGetCommand@2
+     displayName: Push Nuget packs
+     condition: ne( variables.NEW_VERSION , 'empty')
+     inputs:
+       command: push
+       nugetFeedType: 'external'
+       packagesToPush: '/root/.nuget/dolittle-packages/**/*.nupkg'
+       publishFeedCredentials: 'myget_mathieu'
 
 
 # - job: 'Documentation'
