--- a/Source/DotNet/cascading_build.yml
+++ b/Source/DotNet/cascading_build.yml
@@ -9,8 +9,9 @@ steps:
     - script: echo ${{ repo }}
       displayName: Log repo
     - bash: |
-        git clone --recursive https://github.com/${{ repo }}.git
         DIR=$(echo ${{ repo }} | cut -d "/" -f 2)
+        rm -rf $DIR
+        git clone --recursive https://github.com/${{ repo }}.git
         echo "##vso[task.setvariable variable=Folder;isOutput=true]$DIR"
       workingDirectory: $(Agent.BuildDirectory)
       displayName: Clone cascading repo
@@ -21,18 +22,60 @@ steps:
         CWD: '$(Agent.BuildDirectory)/$(clone_repo.Folder)'
         buildConfiguration: 'Release'
 
-    # Increment the patch version, simply do it with bash script (look at set_version_variable.yml)
+    - bash: |
+        setup () {
+          set -o nounset
+        }
+        echoerr () { 
+            printf "%s\n" "$*" >&2;
+        }
+        get_latest_version_tag () {
+            local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
+            while [ ! "$TAG_REFS" ]
+            do
+                sleep 1
+            done
 
-    # do dotnet pack if it has cascading repos using the new version
-
-    # - task: DotNetCoreCLI@2
-    #   displayName: Packing
-    #   inputs:
-    #     projects: './Source/**/*.csproj'
-    #     command: 'pack'
-    #     versioningScheme: byEnvVar
-    #     versionEnvVar: set_version.Version
-    #     outputDir: '/root/.nuget/dolittle-packages'
+            local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
+            echo "$VERSION"
+        }
+        main () {
+            setup
+            VERSION=$(get_latest_version_tag)
+            NEW_PROJECT=false
+            if [ ! "$VERSION" ]
+            then
+                NEW_PROJECT=true
+                VERSION=1.0.0
+                echo No version tag found. Setting version to "$VERSION"
+            fi
+            MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+            MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+            PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+            
+            if [[ "$NEW_PROJECT" = false ]
+            then
+                echo "New patch release, dependency has been upgraded."
+                PATCH=$((PATCH+1))
+            fi
+            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+            echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+            echo Previous version "$VERSION"
+            echo New version "$NEW_VERSION"
+        }
+        main
+      name: set_version
+      parameters:
+        CWD: '$(Agent.BuildDirectory)/$(clone_repo.Folder)'
+    
+    - task: DotNetCoreCLI@2
+      displayName: Packing
+      inputs:
+        projects: 'Source/**/*.csproj'
+        command: 'pack'
+        versioningScheme: byEnvVar
+        versionEnvVar: set_version.Version
+        outputDir: '/root/.nuget/dolittle-packages'
     
   # - ${{ each repo in parameters.CASCADES }}:
   #  -  Get CASCADES from each of the repos git links and do cascading build on those
