--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -60,6 +60,7 @@ jobs:
     dependsOn: "DotNetCore_Build"
     condition: and(succeeded(), ne(dependencies.DotNetCore_Build.outputs['set_version.Version'], 'empty'))
     steps:
+      - checkout: none
       - task: DotNetCoreInstaller@0
         inputs:
           version: "2.2.203"
